// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested routes walk 1`] = `
[
  {
    "_component": "@_modern_js_src/layout",
    "children": [
      {
        "_component": "@_modern_js_src/__auth/layout",
        "children": [
          {
            "_component": "@_modern_js_src/__auth/__shop/layout",
            "children": [
              {
                "_component": "@_modern_js_src/__auth/__shop/item/page",
                "children": undefined,
                "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/__shop/item/page.tsx",
                "id": "__auth/__shop/item/page",
                "origin": "file-system",
                "path": "item",
                "routeType": "page",
                "type": "nested",
              },
            ],
            "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/__shop/layout.ts",
            "id": "__auth/__shop/layout",
            "isRoot": false,
            "origin": "file-system",
            "routeType": "layout",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/__auth/login/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/login/page.tsx",
            "id": "__auth/login/page",
            "origin": "file-system",
            "path": "login",
            "routeType": "page",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/layout.ts",
        "config": "@_modern_js_src/__auth/layout.config",
        "id": "__auth/layout",
        "isRoot": false,
        "loader": "@_modern_js_src/__auth/layout.loader",
        "origin": "file-system",
        "routeType": "layout",
        "type": "nested",
      },
      {
        "_component": "@_modern_js_src/user/layout",
        "children": [
          {
            "_component": "@_modern_js_src/user/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/page.tsx",
            "config": "@_modern_js_src/user/page.config",
            "id": "user/page",
            "index": true,
            "loader": "@_modern_js_src/user/page.loader",
            "origin": "file-system",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/$",
            "action": "@_modern_js_src/user/$.data",
            "clientData": "@_modern_js_src/user/$.data.client",
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/$.tsx",
            "config": "@_modern_js_src/user/$.config.ts",
            "data": "@_modern_js_src/user/$.data",
            "id": "user/$",
            "origin": "file-system",
            "path": "*",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/[id]/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/[id]/page.tsx",
            "data": "@_modern_js_src/user/[id]/page.data",
            "id": "user/(id)/page",
            "origin": "file-system",
            "path": ":id",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/profile/layout",
            "children": [
              {
                "_component": "@_modern_js_src/user/profile/page",
                "children": undefined,
                "component": "<ROOT>/tests/router/fixtures/nested-routes/user/profile/page.tsx",
                "id": "user/profile/page",
                "index": true,
                "loader": "@_modern_js_src/user/profile/page.loader",
                "origin": "file-system",
                "routeType": "page",
                "type": "nested",
              },
            ],
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/profile/layout.ts",
            "id": "user/profile/layout",
            "isRoot": false,
            "origin": "file-system",
            "path": "profile",
            "routeType": "layout",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/user/layout.ts",
        "config": "@_modern_js_src/user/layout.config",
        "id": "user/layout",
        "isRoot": false,
        "loader": "@_modern_js_src/user/layout.loader",
        "origin": "file-system",
        "path": "user",
        "routeType": "layout",
        "type": "nested",
      },
      {
        "_component": "@_modern_js_src/user.profile.name/layout",
        "children": [
          {
            "_component": "@_modern_js_src/user.profile.name/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user.profile.name/page.tsx",
            "config": "@_modern_js_src/user.profile.name/page.config",
            "id": "user.profile.name/page",
            "index": true,
            "origin": "file-system",
            "routeType": "page",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/user.profile.name/layout.ts",
        "config": "@_modern_js_src/user.profile.name/layout.config",
        "id": "user.profile.name/layout",
        "isRoot": false,
        "origin": "file-system",
        "path": "user/profile/name",
        "routeType": "layout",
        "type": "nested",
      },
    ],
    "component": "<ROOT>/tests/router/fixtures/nested-routes/layout.ts",
    "config": "@_modern_js_src/layout.config",
    "id": "layout",
    "isRoot": true,
    "loader": "@_modern_js_src/layout.loader",
    "origin": "file-system",
    "path": "/",
    "routeType": "layout",
    "type": "nested",
  },
]
`;

exports[`nested routes walk with useClientLoader 1`] = `
[
  {
    "_component": "@_modern_js_src/layout",
    "children": [
      {
        "_component": "@_modern_js_src/__auth/layout",
        "children": [
          {
            "_component": "@_modern_js_src/__auth/__shop/layout",
            "children": [
              {
                "_component": "@_modern_js_src/__auth/__shop/item/page",
                "children": undefined,
                "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/__shop/item/page.tsx",
                "id": "__auth/__shop/item/page",
                "origin": "file-system",
                "path": "item",
                "routeType": "page",
                "type": "nested",
              },
            ],
            "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/__shop/layout.ts",
            "id": "__auth/__shop/layout",
            "isRoot": false,
            "origin": "file-system",
            "routeType": "layout",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/__auth/login/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/login/page.tsx",
            "id": "__auth/login/page",
            "origin": "file-system",
            "path": "login",
            "routeType": "page",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/__auth/layout.ts",
        "config": "@_modern_js_src/__auth/layout.config",
        "id": "__auth/layout",
        "isRoot": false,
        "loader": "@_modern_js_src/__auth/layout.loader",
        "origin": "file-system",
        "routeType": "layout",
        "type": "nested",
      },
      {
        "_component": "@_modern_js_src/user/layout",
        "children": [
          {
            "_component": "@_modern_js_src/user/page",
            "children": undefined,
            "clientData": "@_modern_js_src/user/page.loader",
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/page.tsx",
            "config": "@_modern_js_src/user/page.config",
            "id": "user/page",
            "index": true,
            "loader": "@_modern_js_src/user/page.loader",
            "origin": "file-system",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/$",
            "action": "@_modern_js_src/user/$.data",
            "clientData": "@_modern_js_src/user/$.data.client",
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/$.tsx",
            "config": "@_modern_js_src/user/$.config.ts",
            "data": "@_modern_js_src/user/$.data",
            "id": "user/$",
            "origin": "file-system",
            "path": "*",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/[id]/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/[id]/page.tsx",
            "data": "@_modern_js_src/user/[id]/page.data",
            "id": "user/(id)/page",
            "origin": "file-system",
            "path": ":id",
            "routeType": "page",
            "type": "nested",
          },
          {
            "_component": "@_modern_js_src/user/profile/layout",
            "children": [
              {
                "_component": "@_modern_js_src/user/profile/page",
                "children": undefined,
                "clientData": "@_modern_js_src/user/profile/page.loader",
                "component": "<ROOT>/tests/router/fixtures/nested-routes/user/profile/page.tsx",
                "id": "user/profile/page",
                "index": true,
                "loader": "@_modern_js_src/user/profile/page.loader",
                "origin": "file-system",
                "routeType": "page",
                "type": "nested",
              },
            ],
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user/profile/layout.ts",
            "id": "user/profile/layout",
            "isRoot": false,
            "origin": "file-system",
            "path": "profile",
            "routeType": "layout",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/user/layout.ts",
        "config": "@_modern_js_src/user/layout.config",
        "id": "user/layout",
        "isRoot": false,
        "loader": "@_modern_js_src/user/layout.loader",
        "origin": "file-system",
        "path": "user",
        "routeType": "layout",
        "type": "nested",
      },
      {
        "_component": "@_modern_js_src/user.profile.name/layout",
        "children": [
          {
            "_component": "@_modern_js_src/user.profile.name/page",
            "children": undefined,
            "component": "<ROOT>/tests/router/fixtures/nested-routes/user.profile.name/page.tsx",
            "config": "@_modern_js_src/user.profile.name/page.config",
            "id": "user.profile.name/page",
            "index": true,
            "origin": "file-system",
            "routeType": "page",
            "type": "nested",
          },
        ],
        "component": "<ROOT>/tests/router/fixtures/nested-routes/user.profile.name/layout.ts",
        "config": "@_modern_js_src/user.profile.name/layout.config",
        "id": "user.profile.name/layout",
        "isRoot": false,
        "origin": "file-system",
        "path": "user/profile/name",
        "routeType": "layout",
        "type": "nested",
      },
    ],
    "component": "<ROOT>/tests/router/fixtures/nested-routes/layout.ts",
    "config": "@_modern_js_src/layout.config",
    "id": "layout",
    "isRoot": true,
    "loader": "@_modern_js_src/layout.loader",
    "origin": "file-system",
    "path": "/",
    "routeType": "layout",
    "type": "nested",
  },
]
`;
